# python-c-extension-module

./: .clangd  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.ninja  cmake_install.cmake  compile_commands.json  fputsmodule.c  setup.py
tests/: simple.c  test_fputs.py
